--- a/css/main.css
+++ b/css/main.css
@@ -1558,7 +1558,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #2efbe7;
+  background: #1d216a;
 }
 .links-of-blogroll {
   font-size: 13px;
