--- a/css/main.css
+++ b/css/main.css
@@ -1558,7 +1558,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #2dffff;
+  background: #8eff5c;
 }
 .links-of-blogroll {
   font-size: 13px;
